Fix for BUG#1547: "SELECT ... WHERE field = var" sometimes give the wrong result in SPs

Two missing methods added to Item_splocal + test case.